[tool.poetry]
name = "granite-guardian"
version = "0.1.0"
description = ""
authors = ["Yash Sawlani <yash.sawlani@ibm.com>"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12, <3.13"
ibm-watsonx-ai = "1.1.25"
langchain = "0.3.11"
python-dotenv = "1.0.1"
fastapi = "0.115.6"
uvicorn = "0.32.1"
sendgrid = "6.11.0"
transformers = "4.47.0"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.11.10"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.7.0"
attrs = "24.2.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
filelock = "3.16.1"
frozenlist = "1.5.0"
fsspec = "2024.12.0"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.28.1"
huggingface-hub = "0.27.1"
ibm-cos-sdk = "2.13.5"
ibm-cos-sdk-core = "2.13.5"
ibm-cos-sdk-s3transfer = "2.13.5"
idna = "3.10"
importlib-metadata = "8.5.0"
jinja2 = "3.1.4"
jmespath = "1.0.1"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
langchain-core = "0.3.24"
langchain-text-splitters = "0.3.2"
langsmith = "0.2.2"
lomond = "0.3.3"
markupsafe = "3.0.2"
multidict = "6.1.0"
numpy = "1.26.4"
orjson = "3.10.12"
packaging = "24.2"
pandas = "2.1.4"
propcache = "0.2.1"
pyarrow = "18.1.0"
pydantic = "2.10.3"
pydantic-core = "2.27.1"
python-dateutil = "2.9.0.post0"
python-http-client = "3.3.7"
pytz = "2024.2"
pyyaml = "6.0.2"
regex = "2024.11.6"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
safetensors = "0.5.2"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
starkbank-ecdsa = "2.2.0"
starlette = "0.41.3"
tabulate = "0.9.0"
tenacity = "9.0.0"
tokenizers = "0.21.0"
tqdm = "4.67.1"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.1.0"
yarl = "1.18.3"
zipp = "3.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
